# nextReach

./: .dockerignore  .env  Dockerfile  README.md  database_setup.py  gunicorn_config.py  pyproject.toml  server.py  uvicorn_workers.py
.github/workflows/: azure-container-webapp.yml
app/api_requests/: blog_request.py  calculate_earning_request.py  calculate_er_request.py  campaign_completion_request.py  campaign_content_post_request.py  campaign_content_shoot_request.py  campaign_day2_billing_request.py  campaign_day2_payment_request.py  campaign_day8_billing_request.py  campaign_day8_payment_request.py  campaign_draft_approved_request.py  campaign_influencer_finalized_request.py  campaign_pending_deliverables_request.py  campaign_request.py  client_login_request.py  client_request.py  collab_request.py  create_collab.py  expense_request.py  influencer_fb_metric_request.py  influencer_insights.py  influencer_insta_metric_request.py  influencer_request.py  influencer_yt_metric_request.py  next_reach_academy_request.py  profile_update.py  rate_campaign.py  success_story_request.py  update_campaign_request.py  update_client_request.py  update_influencer_fb_metric_request.py  update_influencer_insta_metric_request.py  update_influencer_metric_request.py  update_influencer_request.py  update_influencer_yt_metric_request.py  user_login_request.py  waitlist_request.py
app/blog_directory/: 1.html  10.html  11.html  12.html  13.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
app/clients/: __init__.py  aws_client.py  azure_client.py  email_client.py  interakt_client.py  meta_client.py  sms_client.py
app/constants/: error_codes.py  meta_data.json
app/database/: academy_video_table.py  admin_user_table.py  blog_table.py  campaign_table.py  client_login_table.py  client_table.py  expense_table.py  influencer_fb_metric_table.py  influencer_table.py  (+11 more)
migrations/: 20240904_01_1BHsY.py
(+168 files in other folders)
