[tool.poetry]
name = "next-reach"
version = "1.0.0"
description = "Influencer marketing platform"
authors = ["mayank"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.11"
fastapi = "^0.115.6"
structlog = "^24.4.0"
gunicorn = "^23.0.0"
orjson = "^3.8.12"
uvicorn = "^0.34.0"
pybrake = "^1.10.1"
gremlinpython = "^3.6.3"
psycopg2-binary = "^2.9.6"
requests = "2.31.0"
yoyo-migrations = "^9.0.0"
python-dotenv = "^1.0.1"
fastapi-utilities = "^0.3.0"
jinja2 = "^3.1.4"
pdfkit = "^1.0.0"
sqlalchemy = "^2.0.19"
python-multipart = "^0.0.20"
pydantic = "^2.10.4"
azure-storage-blob = "12.23.0"
instaloader = "^4.14"
pandas = "^2.2.3"
xlsxwriter = "^3.2.0"
pillow = "^11.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
black = "^23.3.0"
seed-isort-config = "^2.2.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]